--- a/TodoTalk/TodoTalk/Base.lproj/Main.storyboard
+++ b/TodoTalk/TodoTalk/Base.lproj/Main.storyboard
@@ -1,24 +1,118 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5eA-6l-XuB">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TodoTalk" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="aHq-Y3-37S">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TodoTalkCell" rowHeight="105" id="ZDj-Tv-tIk" customClass="TodoTalkCell" customModule="TodoTalk" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="105"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZDj-Tv-tIk" id="wjd-XD-IP2">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="105"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iW7-N4-krH">
+                                                    <rect key="frame" x="20" y="27.5" width="50" height="50"/>
+                                                    <color key="backgroundColor" systemColor="systemBrownColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="Pfv-y7-Mkg"/>
+                                                        <constraint firstAttribute="width" constant="50" id="vt4-fh-wX5"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BkM-YO-Baf">
+                                                    <rect key="frame" x="90" y="20" width="304" height="24"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JLy-k7-Ihl">
+                                                    <rect key="frame" x="90" y="54" width="304" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="BkM-YO-Baf" secondAttribute="trailing" constant="20" id="3Ng-7W-1Gf"/>
+                                                <constraint firstItem="BkM-YO-Baf" firstAttribute="leading" secondItem="iW7-N4-krH" secondAttribute="trailing" constant="20" id="GuW-gB-O1d"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="JLy-k7-Ihl" secondAttribute="bottom" constant="20" id="Im5-nL-5bI"/>
+                                                <constraint firstItem="BkM-YO-Baf" firstAttribute="top" secondItem="wjd-XD-IP2" secondAttribute="top" constant="20" id="Swg-su-MqT"/>
+                                                <constraint firstItem="iW7-N4-krH" firstAttribute="leading" secondItem="wjd-XD-IP2" secondAttribute="leading" constant="20" id="a4V-io-Ief"/>
+                                                <constraint firstItem="iW7-N4-krH" firstAttribute="centerY" secondItem="wjd-XD-IP2" secondAttribute="centerY" id="bHz-PG-fyr"/>
+                                                <constraint firstItem="BkM-YO-Baf" firstAttribute="leading" secondItem="iW7-N4-krH" secondAttribute="trailing" constant="20" id="fkY-k5-B4E"/>
+                                                <constraint firstAttribute="trailing" secondItem="JLy-k7-Ihl" secondAttribute="trailing" constant="20" id="hvl-Ef-w8Y"/>
+                                                <constraint firstItem="JLy-k7-Ihl" firstAttribute="top" secondItem="BkM-YO-Baf" secondAttribute="bottom" constant="10" id="nhX-1r-yef"/>
+                                                <constraint firstItem="JLy-k7-Ihl" firstAttribute="leading" secondItem="iW7-N4-krH" secondAttribute="trailing" constant="20" id="tY3-CZ-Eto"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dateCheckView" destination="iW7-N4-krH" id="bgI-p5-sFp"/>
+                                            <outlet property="todoContentLabel" destination="JLy-k7-Ihl" id="fkA-kC-2hZ"/>
+                                            <outlet property="todoTitleLabel" destination="BkM-YO-Baf" id="oC8-XK-dVT"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="aHq-Y3-37S" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="EOj-NT-5ir"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="aHq-Y3-37S" secondAttribute="bottom" id="I3I-ve-fCL"/>
+                            <constraint firstItem="aHq-Y3-37S" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="W3Z-XB-44r"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aHq-Y3-37S" secondAttribute="trailing" id="tRx-q2-hCa"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="eKg-gP-SKU"/>
+                    <connections>
+                        <outlet property="talkTableView" destination="aHq-Y3-37S" id="Im6-xj-Mo6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="992.75362318840587" y="115.84821428571428"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="aWX-F9-ZR1">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5eA-6l-XuB" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="d6n-Hr-JpS">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="n7r-rU-Tkg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LaH-5J-HIt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="82.608695652173921" y="115.84821428571428"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBrownColor">
+            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
