--- a/TodoTalk/TodoTalk/AddTalkVC.xib
+++ b/TodoTalk/TodoTalk/AddTalkVC.xib
@@ -35,6 +35,9 @@
                 </textField>
                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9PG-DK-Gw9">
                     <rect key="frame" x="93" y="262" width="51" height="31"/>
+                    <connections>
+                        <action selector="onTouchSwitch:" destination="-1" eventType="valueChanged" id="Lal-wi-rqk"/>
+                    </connections>
                 </switch>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="날짜 설정" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKS-Cc-5LA">
                     <rect key="frame" x="20" y="267" width="63" height="21"/>
@@ -54,12 +57,21 @@
                     <rect key="frame" x="162" y="262" width="232" height="31"/>
                     <locale key="locale" localeIdentifier="ko_KR"/>
                 </datePicker>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3p4-jV-4iu">
+                    <rect key="frame" x="10" y="59" width="49" height="31"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" title="취소"/>
+                    <connections>
+                        <action selector="cancelButtonTouch:" destination="-1" eventType="touchUpInside" id="coZ-e5-W6Q"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="oSP-EI-EUF" secondAttribute="trailing" constant="20" id="1Cq-fN-RU6"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="13V-U4-SC4" secondAttribute="trailing" constant="20" id="1QT-iA-i4b"/>
+                <constraint firstItem="3p4-jV-4iu" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="2UN-ur-bMh"/>
                 <constraint firstItem="oSP-EI-EUF" firstAttribute="top" secondItem="13V-U4-SC4" secondAttribute="bottom" constant="25" id="2e1-WH-h7H"/>
                 <constraint firstItem="13V-U4-SC4" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="100" id="OAD-wB-5A2"/>
                 <constraint firstItem="a4h-1v-Rru" firstAttribute="leading" secondItem="9PG-DK-Gw9" secondAttribute="trailing" constant="20" id="QzQ-2e-ZNc"/>
@@ -67,6 +79,7 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="yuH-qP-xCt" secondAttribute="trailing" constant="10" id="Zzd-VY-Rq1"/>
                 <constraint firstItem="a4h-1v-Rru" firstAttribute="top" secondItem="oSP-EI-EUF" secondAttribute="bottom" constant="30" id="bVa-mI-8ph"/>
                 <constraint firstItem="13V-U4-SC4" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="d53-Dc-tJm"/>
+                <constraint firstItem="3p4-jV-4iu" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="15" id="ftF-nu-7YX"/>
                 <constraint firstItem="oSP-EI-EUF" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="jKy-3c-gdN"/>
                 <constraint firstItem="AKS-Cc-5LA" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="jV2-OK-7Hx"/>
                 <constraint firstItem="9PG-DK-Gw9" firstAttribute="leading" secondItem="AKS-Cc-5LA" secondAttribute="trailing" constant="10" id="qEL-Xe-0G6"/>
