--- a/TodoTalk/TodoTalk/Base.lproj/Main.storyboard
+++ b/TodoTalk/TodoTalk/Base.lproj/Main.storyboard
@@ -27,6 +27,12 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="105"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JLy-k7-Ihl">
+                                                    <rect key="frame" x="80" y="44" width="324" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iW7-N4-krH">
                                                     <rect key="frame" x="20" y="27.5" width="50" height="50"/>
                                                     <color key="backgroundColor" systemColor="systemBrownColor"/>
@@ -35,32 +41,23 @@
                                                         <constraint firstAttribute="width" constant="50" id="vt4-fh-wX5"/>
                                                     </constraints>
                                                 </view>
-                                                <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="253" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="8jp-2x-YhR">
-                                                    <rect key="frame" x="80" y="10" width="314" height="85"/>
-                                                    <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BkM-YO-Baf">
-                                                            <rect key="frame" x="0.0" y="0.0" width="314" height="59.5"/>
-                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JLy-k7-Ihl">
-                                                            <rect key="frame" x="0.0" y="64.5" width="314" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                    </subviews>
-                                                    <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
-                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BkM-YO-Baf">
+                                                    <rect key="frame" x="80" y="15" width="324" height="24"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="8jp-2x-YhR" firstAttribute="leading" secondItem="iW7-N4-krH" secondAttribute="trailing" constant="10" id="3j3-t8-Ik9"/>
-                                                <constraint firstAttribute="trailing" secondItem="8jp-2x-YhR" secondAttribute="trailing" constant="20" id="Fpl-At-ptL"/>
-                                                <constraint firstItem="8jp-2x-YhR" firstAttribute="top" secondItem="wjd-XD-IP2" secondAttribute="top" constant="10" id="VI7-J6-hlD"/>
+                                                <constraint firstItem="JLy-k7-Ihl" firstAttribute="leading" secondItem="iW7-N4-krH" secondAttribute="trailing" constant="10" id="32N-h3-Dx5"/>
+                                                <constraint firstItem="BkM-YO-Baf" firstAttribute="top" secondItem="wjd-XD-IP2" secondAttribute="top" constant="15" id="CUt-dW-afE"/>
+                                                <constraint firstItem="BkM-YO-Baf" firstAttribute="leading" secondItem="iW7-N4-krH" secondAttribute="trailing" constant="10" id="IwT-gx-2Ou"/>
+                                                <constraint firstItem="JLy-k7-Ihl" firstAttribute="top" secondItem="BkM-YO-Baf" secondAttribute="bottom" constant="5" id="Izg-p1-Oz0"/>
+                                                <constraint firstAttribute="trailing" secondItem="BkM-YO-Baf" secondAttribute="trailing" constant="10" id="MdV-uZ-ddL"/>
                                                 <constraint firstItem="iW7-N4-krH" firstAttribute="leading" secondItem="wjd-XD-IP2" secondAttribute="leading" constant="20" id="a4V-io-Ief"/>
                                                 <constraint firstItem="iW7-N4-krH" firstAttribute="centerY" secondItem="wjd-XD-IP2" secondAttribute="centerY" id="bHz-PG-fyr"/>
-                                                <constraint firstAttribute="bottom" secondItem="8jp-2x-YhR" secondAttribute="bottom" constant="10" id="ljm-Pe-y0f"/>
+                                                <constraint firstAttribute="trailing" secondItem="JLy-k7-Ihl" secondAttribute="trailing" constant="10" id="dWD-K6-sul"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="JLy-k7-Ihl" secondAttribute="bottom" constant="10" id="jJ0-gP-8Kt"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -110,9 +107,6 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="opaqueSeparatorColor">
-            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
