--- a/TodoTalk/TodoTalk/Base.lproj/Main.storyboard
+++ b/TodoTalk/TodoTalk/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iW7-N4-krH">
                                                     <rect key="frame" x="20" y="27.5" width="50" height="50"/>
-                                                    <color key="backgroundColor" systemColor="systemBrownColor"/>
+                                                    <color key="backgroundColor" red="0.13346986052358806" green="0.80545273507130122" blue="0.38953357277118655" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="Pfv-y7-Mkg"/>
                                                         <constraint firstAttribute="width" constant="50" id="vt4-fh-wX5"/>
@@ -109,9 +109,6 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
