--- a/TodoTalk/TodoTalk/TalkVC.xib
+++ b/TodoTalk/TodoTalk/TalkVC.xib
@@ -11,8 +11,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TalkVC" customModule="TodoTalk" customModuleProvider="target">
             <connections>
                 <outlet property="contentsTableView" destination="jFI-Eh-iVX" id="WQa-Ey-4zn"/>
+                <outlet property="inputBGView" destination="tt7-6w-ZED" id="QSk-ov-jpG"/>
                 <outlet property="inputTextView" destination="poI-Ka-tOe" id="TdT-qS-eRP"/>
-                <outlet property="inputViewBottomMargin" destination="wzk-dW-toU" id="0fK-Oe-TX0"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -25,7 +25,7 @@
                     <rect key="frame" x="0.0" y="44" width="414" height="778"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tt7-6w-ZED">
+                <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tt7-6w-ZED">
                     <rect key="frame" x="0.0" y="822" width="414" height="40"/>
                     <subviews>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="poI-Ka-tOe">
@@ -68,7 +68,7 @@
                 <constraint firstItem="tt7-6w-ZED" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="H11-ZK-qiG"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="jFI-Eh-iVX" secondAttribute="trailing" id="KKg-PO-k2C"/>
                 <constraint firstItem="jFI-Eh-iVX" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="LTS-Iv-dUb"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="tt7-6w-ZED" secondAttribute="bottom" id="wzk-dW-toU"/>
+                <constraint firstItem="tt7-6w-ZED" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="vfU-c6-ZJs"/>
             </constraints>
             <point key="canvasLocation" x="131.8840579710145" y="130.58035714285714"/>
         </view>
