--- a/TodoTalk/TodoTalk/Base.lproj/Main.storyboard
+++ b/TodoTalk/TodoTalk/Base.lproj/Main.storyboard
@@ -95,6 +95,8 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="d6n-Hr-JpS">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <navigationBarAppearance key="standardAppearance"/>
+                        <navigationBarAppearance key="scrollEdgeAppearance"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
