--- a/TodoTalk/TodoTalk/MyTalkCell.xib
+++ b/TodoTalk/TodoTalk/MyTalkCell.xib
@@ -29,7 +29,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DYI-WM-Y3T">
                                 <rect key="frame" x="67" y="0.0" width="309" height="163"/>
                                 <subviews>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" scrollEnabled="NO" text="sdasd asd sad sad sad sad asd asdasd as das d asd asd asd asdsa asd sad asd asd asd sadasd sa" translatesAutoresizingMaskIntoConstraints="NO" id="8wP-EO-G2G">
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" scrollEnabled="NO" editable="NO" text="sdasd asd sad sad sad sad asd asdasd as das d asd asd asd asdsa asd sad asd asd asd sadasd sa" translatesAutoresizingMaskIntoConstraints="NO" id="8wP-EO-G2G">
                                         <rect key="frame" x="5" y="5" width="299" height="153"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="15" id="azw-7g-Qdu"/>
@@ -49,6 +49,7 @@
                                 </constraints>
                             </view>
                         </subviews>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="DYI-WM-Y3T" firstAttribute="top" secondItem="c1V-2I-GiI" secondAttribute="top" id="3Pf-bO-MWW"/>
                         </constraints>
